overflow fix

--- a/src/pages/LandingPage/Pages/HIW/hiw.css
+++ b/src/pages/LandingPage/Pages/HIW/hiw.css
@@ -3,6 +3,7 @@
   align-items: flex-end;
   justify-content: end;
   position: relative;
+  overflow-x: hidden;
 }
 
 .hiw-mockup {
